--- a/index.html
+++ b/index.html
@@ -18,31 +18,31 @@
       <center><h1>《用户隐私政策》</h1></center>
 <h3>1.确认并接受</h3>
 
-1.1 赚汇兼职根据《赚汇兼职服务协议》（以下简称"本协议"）为用户提供各类网站、产品或服务等（以下简称“本服务”）。“赚汇兼职”是指及其相关服务可能存在的运营关联单位。“用户”是指本服务的使用人，本协议也可能使用“您”来称呼用户。本协议的条款赚汇兼职有权随时更新，一旦发生变动，赚汇兼职将在网页上公布修改内容。修改后的本协议一旦在网页上公布即有效代替原来的本协议。此外，当您使用赚汇兼职某一具体网站频道、产品、服务等具体服务时，您应遵守赚汇兼职随时公布的与该具体服务相关的具体协议、指引和规则等。如《游记协议》，《网络信息侵权通知指引》，《免责声明》等，前述所有的具体协议、指引和声明等，均构成本协议的一部分。<br/>
+1.1 爱兼职-轻松找工作根据《爱兼职-轻松找工作服务协议》（以下简称"本协议"）为用户提供各类网站、产品或服务等（以下简称“本服务”）。“爱兼职-轻松找工作”是指及其相关服务可能存在的运营关联单位。“用户”是指本服务的使用人，本协议也可能使用“您”来称呼用户。本协议的条款爱兼职-轻松找工作有权随时更新，一旦发生变动，爱兼职-轻松找工作将在网页上公布修改内容。修改后的本协议一旦在网页上公布即有效代替原来的本协议。此外，当您使用爱兼职-轻松找工作某一具体网站频道、产品、服务等具体服务时，您应遵守爱兼职-轻松找工作随时公布的与该具体服务相关的具体协议、指引和规则等。如《游记协议》，《网络信息侵权通知指引》，《免责声明》等，前述所有的具体协议、指引和声明等，均构成本协议的一部分。<br/>
 
-1.2 您在使用本服务之前，应仔细阅读本协议以及相关具体协议。本协议构成法律上的书面协议，本协议限制、免责条款可能以黑体加粗形式提示您注意。除非您已阅读并接受本协议所有条款，否则您无权使用本服务。如您不同意本协议，或本协议全部或任何部分的修改，请您立即停止使用本服务；您一旦使用本服务，即视为您已完全理解并同意本本协议各项内容，包括赚汇兼职对本协议随时所做的任何修改。<br/>
+1.2 您在使用本服务之前，应仔细阅读本协议以及相关具体协议。本协议构成法律上的书面协议，本协议限制、免责条款可能以黑体加粗形式提示您注意。除非您已阅读并接受本协议所有条款，否则您无权使用本服务。如您不同意本协议，或本协议全部或任何部分的修改，请您立即停止使用本服务；您一旦使用本服务，即视为您已完全理解并同意本本协议各项内容，包括爱兼职-轻松找工作对本协议随时所做的任何修改。<br/>
 
 1.3 若用户未满18周岁则属于未成年人用户，未成年人用户请在监护人监护、指导下，阅读了解本协议和使用本服务。<br/>
 
 <h3>2.服务内容</h3>
 
-2.1 本服务的具体内容，由赚汇兼职根据实际情况决定提供或不提供。您理解并同意，本服务是按照现有技术和条件所能达到的现状提供的。赚汇兼职会尽最大努力向您提供服务，确保服务的连贯性和安全性；但赚汇兼职不能随时预见和防范法律、技术以及其他风险，包括但不限于不可抗力、病毒、木马、黑客攻击、系统不稳定、第三方服务瑕疵、政府行为等原因可能导致的服务中断、数据丢失以及其他的损失和风险。对于任何用户信息或个人化设定之时效、删除、传递错误、未予储存或其它任何问题，赚汇兼职均不承担任何责任。赚汇兼职保留有权不经事先通知为升级、维护或其它目的暂停本服务全部或任何部分。<br/>
+2.1 本服务的具体内容，由爱兼职-轻松找工作根据实际情况决定提供或不提供。您理解并同意，本服务是按照现有技术和条件所能达到的现状提供的。爱兼职-轻松找工作会尽最大努力向您提供服务，确保服务的连贯性和安全性；但爱兼职-轻松找工作不能随时预见和防范法律、技术以及其他风险，包括但不限于不可抗力、病毒、木马、黑客攻击、系统不稳定、第三方服务瑕疵、政府行为等原因可能导致的服务中断、数据丢失以及其他的损失和风险。对于任何用户信息或个人化设定之时效、删除、传递错误、未予储存或其它任何问题，爱兼职-轻松找工作均不承担任何责任。爱兼职-轻松找工作保留有权不经事先通知为升级、维护或其它目的暂停本服务全部或任何部分。<br/>
 
-2.2 请您理解，赚汇兼职仅提供相关的网络服务，除此之外与相关网络服务有关的设备（如个人电脑、手机、及其他与接入互联网或移动网有关的装置）及所需的费用（如为接入互联网而支付的电话费及上网费、为使用移动网而支付的手机费）均应由用户自行负担。您理解并同意，您使用本服务时会耗用您的终端设备和带宽等资源。<br/>
+2.2 请您理解，爱兼职-轻松找工作仅提供相关的网络服务，除此之外与相关网络服务有关的设备（如个人电脑、手机、及其他与接入互联网或移动网有关的装置）及所需的费用（如为接入互联网而支付的电话费及上网费、为使用移动网而支付的手机费）均应由用户自行负担。您理解并同意，您使用本服务时会耗用您的终端设备和带宽等资源。<br/>
 
-2.3您同意赚汇兼职可以在提供服务的过程中自行或由第三方广告商向您发送广告、推广或宣传信息（包括商业与非商业信息），其方式和范围可不经向您特别通知而变更。赚汇兼职可能为您提供选择停止接受广告信息的功能或渠道，但任何时候您都不得以本协议未明确约定或赚汇兼职未书面许可的方式屏蔽、过滤广告信息。赚汇兼职依照法律的规定对广告商履行相关义务，您应当自行判断广告信息的真实性并为自己的判断行为负责，除法律明确规定外，您因依该广告信息进行的交易或前述广告商提供的内容而遭受的损失或损害，赚汇兼职不承担责任。<br/>
+2.3您同意爱兼职-轻松找工作可以在提供服务的过程中自行或由第三方广告商向您发送广告、推广或宣传信息（包括商业与非商业信息），其方式和范围可不经向您特别通知而变更。爱兼职-轻松找工作可能为您提供选择停止接受广告信息的功能或渠道，但任何时候您都不得以本协议未明确约定或爱兼职-轻松找工作未书面许可的方式屏蔽、过滤广告信息。爱兼职-轻松找工作依照法律的规定对广告商履行相关义务，您应当自行判断广告信息的真实性并为自己的判断行为负责，除法律明确规定外，您因依该广告信息进行的交易或前述广告商提供的内容而遭受的损失或损害，爱兼职-轻松找工作不承担责任。<br/>
 
-2.4 赚汇兼职依法为用户提供本服务，但是用户应对其使用赚汇兼职自行承担责任及风险，赚汇兼职在任何情况下不就因使用或不能使用赚汇兼职提供的服务所发生的特殊的、意外的、直接或间接的损失承担赔偿责任。<br/>
+2.4 爱兼职-轻松找工作依法为用户提供本服务，但是用户应对其使用爱兼职-轻松找工作自行承担责任及风险，爱兼职-轻松找工作在任何情况下不就因使用或不能使用爱兼职-轻松找工作提供的服务所发生的特殊的、意外的、直接或间接的损失承担赔偿责任。<br/>
 
-2.5 除您与赚汇兼职另行书面约定外，赚汇兼职保留随时停止、修改或中断服务而不需通知您的权利。赚汇兼职不需就此对用户或第三方负责。<br/>
+2.5 除您与爱兼职-轻松找工作另行书面约定外，爱兼职-轻松找工作保留随时停止、修改或中断服务而不需通知您的权利。爱兼职-轻松找工作不需就此对用户或第三方负责。<br/>
 
 <h3>3.用户使用基本规则</h3>
 
-3.1 您在使用赚汇兼职的服务时可能需要注册一个账号。注册成功后，便成为赚汇兼职的注册用户，会获得到一个账号和密码。您理解并接受赚汇兼职对该账号的授权仅限于您个人、非商业、不可转让及非排他性的使用，赚汇兼职保留该账号的所有权，并可以在必要时收回该账号，您仅可为访问或使用本服务的目的而使用该账号。赚汇兼职特别提醒您应妥善保管您的帐号和密码。当您使用完毕后，应安全退出。用户对利用该密码和帐号所进行的一切活动负全部责任。如果您的密码和帐号遭到未授权的使用或发生其他任何安全问题，应立即通知赚汇兼职。<br/>
+3.1 您在使用爱兼职-轻松找工作的服务时可能需要注册一个账号。注册成功后，便成为爱兼职-轻松找工作的注册用户，会获得到一个账号和密码。您理解并接受爱兼职-轻松找工作对该账号的授权仅限于您个人、非商业、不可转让及非排他性的使用，爱兼职-轻松找工作保留该账号的所有权，并可以在必要时收回该账号，您仅可为访问或使用本服务的目的而使用该账号。爱兼职-轻松找工作特别提醒您应妥善保管您的帐号和密码。当您使用完毕后，应安全退出。用户对利用该密码和帐号所进行的一切活动负全部责任。如果您的密码和帐号遭到未授权的使用或发生其他任何安全问题，应立即通知爱兼职-轻松找工作。<br/>
 
-3.2 您同意在使用本服务时遵守当地的相关法律法规的所有规定，并尊重当地的道德和风俗习惯。如您的行为违反当地法律法规或道德风俗，您应当为此独立承担责任。构成违法或犯罪的，将由您自行承担刑事责任。如果您违反了本条约定，相关国家机关或机构可能会对您提起诉讼、罚款或采取其他制裁措施，并要求赚汇兼职给予协助的，赚汇兼职可能会依法协助。如果您的违法行为造成赚汇兼职损害的，您应依法予以赔偿。<br/>
+3.2 您同意在使用本服务时遵守当地的相关法律法规的所有规定，并尊重当地的道德和风俗习惯。如您的行为违反当地法律法规或道德风俗，您应当为此独立承担责任。构成违法或犯罪的，将由您自行承担刑事责任。如果您违反了本条约定，相关国家机关或机构可能会对您提起诉讼、罚款或采取其他制裁措施，并要求爱兼职-轻松找工作给予协助的，爱兼职-轻松找工作可能会依法协助。如果您的违法行为造成爱兼职-轻松找工作损害的，您应依法予以赔偿。<br/>
 
-3.3 用户可在使用本服务发布文章、图片、评论及其他信息，但不得使用赚汇兼职服务发送或传播敏感信息和违反国家法律法规政策的信息，此类信息包括但不限于： <br/>
+3.3 用户可在使用本服务发布文章、图片、评论及其他信息，但不得使用爱兼职-轻松找工作服务发送或传播敏感信息和违反国家法律法规政策的信息，此类信息包括但不限于： <br/>
 1）反对宪法所确定的基本原则的；<br/>
 2）危害国家安全，泄露国家秘密，颠覆国家政权，破坏国家统一的；<br/>
 3）损害国家荣誉和利益的；<br/>
@@ -57,41 +57,41 @@
 1） 遵守中国及所在国有关的法律和法规；<br/>
 2）用户不得侵任何人的知识产权，包括但不限于不得将侵犯任何人的专利、商标、著作权、商业秘密或其他专属权利；<br/>
 3）用户不得侵犯涉密信息，包括但不限于不得将无权传送的内容（例如商业秘密、内部资料、机密资料、个人信息等）进行上载、张贴、发送电子邮件或以其它方式发布、传送、传播、储存、或提供；<br/>
-4）用户不得为任何非法目的而使用网络服务系统，包括但不限于应当遵守法律法规，以及所有与网络服务有关的网络协议、规定和程序，不得利用赚汇兼职网络服务系统进行任何可能对互联网的正常运转造成不利影响的行为，或其他任何非法行为；<br/>
-5）用户仅可在非商业范围内使用本服务。不得进行任何未经赚汇兼职书面许可的商业广告行为，包括但不限于将广告函件、促销资料、垃圾邮件等，加以上载、张贴、发送电子邮件、发送站内信或以其它方式发布、传送、传播、储存，或提供；不得对赚汇兼职上的任何数据作商业性利用，包括但不限于在未经赚汇兼职事先书面同意的情况下，以复制、发布、传播等任何方式使用赚汇兼职上展示的资料；<br/>
-6）用户不得利用本服务实施侵权行为，包括但不限于不得使用虚假、冒充他人或其他方的信息注册赚汇兼职后发布评论或其他内容，不得冒充任何人或机构，或以虚伪不实的方式谎称或使人误认为其言论或身份与任何人或任何机构有关；不得伪造标题或以其它方式操控识别资料，使人误认为该内容为赚汇兼职所传送；不得以虚构或歪曲事实的方式不当评价其他用户；不得利用赚汇兼职网络服务系统传输任何骚扰性的、中伤他人的、辱骂性的、庸俗淫秽的或其他任何非法的信息资料；<br/>
-7） 用户不得破坏本服务的提供，或侵犯本服务相关的任何权利，包括但不限于不得将有关干扰、破坏或限制任何计算机软件、硬件或通讯设备功能的软件病毒或其他计算机代码、档案和程序之资料，加以上载、张贴、发送电子邮件或以其它方式传送；不得采取任何将导致不合理的庞大数据负载加诸赚汇兼职网络设备的行动；<br/>
-8）用户不得利用网络服务进行任何不利于赚汇兼职的行为。<br/>
+4）用户不得为任何非法目的而使用网络服务系统，包括但不限于应当遵守法律法规，以及所有与网络服务有关的网络协议、规定和程序，不得利用爱兼职-轻松找工作网络服务系统进行任何可能对互联网的正常运转造成不利影响的行为，或其他任何非法行为；<br/>
+5）用户仅可在非商业范围内使用本服务。不得进行任何未经爱兼职-轻松找工作书面许可的商业广告行为，包括但不限于将广告函件、促销资料、垃圾邮件等，加以上载、张贴、发送电子邮件、发送站内信或以其它方式发布、传送、传播、储存，或提供；不得对爱兼职-轻松找工作上的任何数据作商业性利用，包括但不限于在未经爱兼职-轻松找工作事先书面同意的情况下，以复制、发布、传播等任何方式使用爱兼职-轻松找工作上展示的资料；<br/>
+6）用户不得利用本服务实施侵权行为，包括但不限于不得使用虚假、冒充他人或其他方的信息注册爱兼职-轻松找工作后发布评论或其他内容，不得冒充任何人或机构，或以虚伪不实的方式谎称或使人误认为其言论或身份与任何人或任何机构有关；不得伪造标题或以其它方式操控识别资料，使人误认为该内容为爱兼职-轻松找工作所传送；不得以虚构或歪曲事实的方式不当评价其他用户；不得利用爱兼职-轻松找工作网络服务系统传输任何骚扰性的、中伤他人的、辱骂性的、庸俗淫秽的或其他任何非法的信息资料；<br/>
+7） 用户不得破坏本服务的提供，或侵犯本服务相关的任何权利，包括但不限于不得将有关干扰、破坏或限制任何计算机软件、硬件或通讯设备功能的软件病毒或其他计算机代码、档案和程序之资料，加以上载、张贴、发送电子邮件或以其它方式传送；不得采取任何将导致不合理的庞大数据负载加诸爱兼职-轻松找工作网络设备的行动；<br/>
+8）用户不得利用网络服务进行任何不利于爱兼职-轻松找工作的行为。<br/>
 
-3.5 如用户违反本协议规定，赚汇兼职有权在不通知用户的情况下删帖，严重违反上述规定的，赚汇兼职有权单方取消对用户的服务。同时如果赚汇兼职有理由认为用户的任何行为，包括但不限于用户的任何言论、账号、昵称或其它行为，违反或可能违反国家法律和法规的任何规定或影响到赚汇兼职的利益，赚汇兼职可在任何时候不经任何事先通知单方停止向用户提供服务，并无需对用户承担任何义务。<br/>
+3.5 如用户违反本协议规定，爱兼职-轻松找工作有权在不通知用户的情况下删帖，严重违反上述规定的，爱兼职-轻松找工作有权单方取消对用户的服务。同时如果爱兼职-轻松找工作有理由认为用户的任何行为，包括但不限于用户的任何言论、账号、昵称或其它行为，违反或可能违反国家法律和法规的任何规定或影响到爱兼职-轻松找工作的利益，爱兼职-轻松找工作可在任何时候不经任何事先通知单方停止向用户提供服务，并无需对用户承担任何义务。<br/>
 
-3.6 您在此承诺不经赚汇兼职书面同意，不能利用本服务进行销售或开展其他商业性行为。如用户违反此约定，赚汇兼职将依法追究您的违约责任，由此给赚汇兼职造成损失的，赚汇兼职有权主张损失赔偿，该等赔偿包括但不限于直接损失和可得利益损失。<br/>
+3.6 您在此承诺不经爱兼职-轻松找工作书面同意，不能利用本服务进行销售或开展其他商业性行为。如用户违反此约定，爱兼职-轻松找工作将依法追究您的违约责任，由此给爱兼职-轻松找工作造成损失的，爱兼职-轻松找工作有权主张损失赔偿，该等赔偿包括但不限于直接损失和可得利益损失。<br/>
 
 <h3>4.用户隐私保护</h3>
 
-4.1赚汇兼职非常重视对用户个人信息的保护。赚汇兼职将按照本协议及《隐私政策》的规定收集、使用、储存和分享您的个人信息。本协议对个人信息保护规定的内容与上述《隐私政策》有相冲突的，及本协议对个人信息保护相关内容未作明确规定的，均应以《隐私政策》的内容为准。<br/>
+4.1爱兼职-轻松找工作非常重视对用户个人信息的保护。爱兼职-轻松找工作将按照本协议及《隐私政策》的规定收集、使用、储存和分享您的个人信息。本协议对个人信息保护规定的内容与上述《隐私政策》有相冲突的，及本协议对个人信息保护相关内容未作明确规定的，均应以《隐私政策》的内容为准。<br/>
 
-4.2保护用户隐私是赚汇兼职的一项基本政策，赚汇兼职不对外公开或向第三方提供用户的注册资料及用户在使用网络服务时存储在赚汇兼职的非公开内容，但下列情况除外：
+4.2保护用户隐私是爱兼职-轻松找工作的一项基本政策，爱兼职-轻松找工作不对外公开或向第三方提供用户的注册资料及用户在使用网络服务时存储在爱兼职-轻松找工作的非公开内容，但下列情况除外：
 1）事先获得用户的明确授权；<br/>
 2）根据有关的法律法规要求；<br/>
 3）按照相关政府主管部门的要求；<br/>
 4）为维护社会公众的利益；<br/>
-5）为维护赚汇兼职的合法权益等<br/>
+5）为维护爱兼职-轻松找工作的合法权益等<br/>
 
-4.3 在以下（包括但不限于）几种情况下，赚汇兼职有权使用用户的个人信息：<br/>
-1） 某些情况下为进行相关商业合作需要调取用户的个人信息，该等情形包括但不限于在进行第三方旅游产品促销或抽奖时，赚汇兼职可能会与赞助商共享用户的个人信息，在这些情况下赚汇兼职可能会在发送用户信息之前进行提示，您可以通过不参与来终止传送过程。<br/>
-2） 赚汇兼职可能会将用户信息与第三方数据匹配。<br/>
-3） 赚汇兼职会披露用户统计数据，向未来的合作伙伴、广告商及其他第三方以及为了其他合法目的而描述公司的服务。在对用户隐私资料进行去身份化处理的前提下，赚汇兼职有权对整个用户数据库进行分析并对用户数据库进行商业上的利用。<br/>
-4） 用户通过赚汇兼职购买第三方利用赚汇兼职平台提供产品或服务时，赚汇兼职获得的信息及用户提供的信息（例如用户的信用卡信息和通讯信息等）会提供给商家，这些商家会进行数据收集操作，但赚汇兼职对商家的此种操作不负任何责任。<br/>
+4.3 在以下（包括但不限于）几种情况下，爱兼职-轻松找工作有权使用用户的个人信息：<br/>
+1） 某些情况下为进行相关商业合作需要调取用户的个人信息，该等情形包括但不限于在进行第三方旅游产品促销或抽奖时，爱兼职-轻松找工作可能会与赞助商共享用户的个人信息，在这些情况下爱兼职-轻松找工作可能会在发送用户信息之前进行提示，您可以通过不参与来终止传送过程。<br/>
+2） 爱兼职-轻松找工作可能会将用户信息与第三方数据匹配。<br/>
+3） 爱兼职-轻松找工作会披露用户统计数据，向未来的合作伙伴、广告商及其他第三方以及为了其他合法目的而描述公司的服务。在对用户隐私资料进行去身份化处理的前提下，爱兼职-轻松找工作有权对整个用户数据库进行分析并对用户数据库进行商业上的利用。<br/>
+4） 用户通过爱兼职-轻松找工作购买第三方利用爱兼职-轻松找工作平台提供产品或服务时，爱兼职-轻松找工作获得的信息及用户提供的信息（例如用户的信用卡信息和通讯信息等）会提供给商家，这些商家会进行数据收集操作，但爱兼职-轻松找工作对商家的此种操作不负任何责任。<br/>
 
-4.4如您认为您的个人信息被赚汇兼职超目的使用、或被其他用户侵权，请立即与赚汇兼职联系，并按照要求提供相应的证明资料，赚汇兼职将及时调查核实处理。<br/>
+4.4如您认为您的个人信息被爱兼职-轻松找工作超目的使用、或被其他用户侵权，请立即与爱兼职-轻松找工作联系，并按照要求提供相应的证明资料，爱兼职-轻松找工作将及时调查核实处理。<br/>
 
 <h3>5.免责声明</h3>
 
-5.1赚汇兼职是一个向广大用户提供信息存储空间服务的平台，赚汇兼职上的部分信息来自于第三方或用户的提供，且任何信息都存在滞后或会被更新的可能，因此赚汇兼职不能保证在任何时候任何信息都准确无误。您应自行谨慎判断确定相关服务及/或信息的真实性、合法性和有效性，并自行承担因此产生的责任与损失。<br/>
+5.1爱兼职-轻松找工作是一个向广大用户提供信息存储空间服务的平台，爱兼职-轻松找工作上的部分信息来自于第三方或用户的提供，且任何信息都存在滞后或会被更新的可能，因此爱兼职-轻松找工作不能保证在任何时候任何信息都准确无误。您应自行谨慎判断确定相关服务及/或信息的真实性、合法性和有效性，并自行承担因此产生的责任与损失。<br/>
 
-5.2赚汇兼职有权利但无义务，改善或更正本网站任何部分之任何疏漏、错误。<br/>
+5.2爱兼职-轻松找工作有权利但无义务，改善或更正本网站任何部分之任何疏漏、错误。<br/>
 
-5.3赚汇兼职不保证，包括但不限于：本服务适合用户的使用要求；本服务不受干扰，及时、安全、可靠或不出现错误。"<br/>
+5.3爱兼职-轻松找工作不保证，包括但不限于：本服务适合用户的使用要求；本服务不受干扰，及时、安全、可靠或不出现错误。"<br/>
 </body>
 </html>
