--- a/tech.html
+++ b/tech.html
@@ -2,8 +2,8 @@
 <br/>
 <br/>
 <br/>
-<center><h1>《爱兼职-轻松找工作》愿你找到满意的兼职</h1></center>
+<center><h1>《爱兼职-工作就来这里找》愿你找到满意的兼职</h1></center>
 <br/>
 <br/>
 <br/>
-<center>如有疑问，请联系：lnmie4964@163.com</center>
+<center>如有疑问，请联系：mj8525542074@126.com</center>
