--- a/SpeedGolfSolitaire.html
+++ b/SpeedGolfSolitaire.html
@@ -97,7 +97,7 @@
                   this page.
                 </p> <p>This policy is effective as of 2020-11-04</p> <p><strong>Contact Us</strong></p> <p>
                   If you have any questions or suggestions about my
-                  Privacy Policy, do not hesitate to contact me at Gutierglandula.36285@gmail.com.
+                  Privacy Policy, do not hesitate to contact me at Carla.barrenal302258@gmail.com.
                 </p>
     </body>
     </html>
