--- a/TexasHoldemPoker.html
+++ b/TexasHoldemPoker.html
@@ -9,7 +9,7 @@
     </head>
     <body>
     <strong>Privacy Policy</strong> <p>
-                   built the "Texas Holdem Poker Game" app as
+                   built the "Texas Hold'em Poker Game" app as
                   a Free app. This SERVICE is provided by
                    at no cost and is intended for use as
                   is.
@@ -26,7 +26,7 @@
                 </p> <p>
                   The terms used in this Privacy Policy have the same meanings
                   as in our Terms and Conditions, which is accessible at
-                 "Texas Holdem Poker Game" unless otherwise defined in this Privacy Policy.
+                 "Texas Hold'em Poker Game" unless otherwise defined in this Privacy Policy.
                 </p> <p><strong>Information Collection and Use</strong></p> <p>
                   For a better experience, while using our Service, I
                   may require you to provide us with certain personally
